# ASRI-2024

./: .gitignore  LICENSE  _quarto.yml  index.qmd  pyproject.toml  python_beginner_choosing_a_model_ASRI24.ipynb  python_beginner_choosing_a_model_complete_ASRI24.ipynb  python_intermediate_classification_ASRI24.ipynb  python_intermediate_classification_complete_ASRI24.ipynb  python_intermediate_clustering_ASRI24.ipynb  python_intermediate_clustering_complete_ASRI24.ipynb
docs/: index.html  python_beginner_choosing_a_model_complete_ASRI24.html  python_intermediate_classification_complete_ASRI24.html  python_intermediate_clustering_complete_ASRI24.html  search.json  styles.css
docs/site_libs/bootstrap/: bootstrap.min.css
